WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305835
Service worker performance timing entries are not correctly generated with DOMCache loads
https://bugs.webkit.org/show_bug.cgi?id=305835
Summary
Service worker performance timing entries are not correctly generated with DO...
youenn fablet
Reported
2026-01-20 07:24:56 PST
Service worker performance timing entries are not correctly generated with DOMCache loads
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-01-20 07:25:07 PST
<
rdar://problem/168501808
>
youenn fablet
Comment 2
2026-01-20 07:49:36 PST
Pull request:
https://github.com/WebKit/WebKit/pull/56900
EWS
Comment 3
2026-01-23 04:51:20 PST
Committed
306076@main
(d54287a0ebaa): <
https://commits.webkit.org/306076@main
> Reviewed commits have been landed. Closing PR #56900 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug