Service worker performance timing entries are not correctly generated with DOMCache loads rdar://168501808 https://bugs.webkit.org/show_bug.cgi?id=305835

Reviewed by Chris Dumez.

The response URL is needed to create the related performance timing entry.
When the load is coming straight from DOMCache, the response URL may not be set.
In that case, we use the request URL in ServiceWorkerFetchTask::respondWithCacheResponse, as done for instance when processing the response given via FetchEvent.respondWith..

Covered by rebased test.

Canonical link: https://commits.webkit.org/306076@main